@@ -4,6 +4,8 @@
 
 * Added DayIntervalTE contributed by Ira Burton which matches every n days past a given date
 
+* Added YearTE requested by Pat Maddox
+
 == Version 0.3.0
 
 * TExpr (finally!) becomes a Module instead of a superclass 
